test/corpus/literals.txt
================================================================================
Simple variable directive
================================================================================
[% variable %]

--------------------------------------------------------------------------------

(source_file
  (directive
    (code
      (identifier)))
  (content))

================================================================================
Content and directive
================================================================================
Hello World
[% name %]

--------------------------------------------------------------------------------

(source_file
  (content)
  (directive
    (code
      (identifier)))
  (content))

================================================================================
Directive with whitespace control
================================================================================
[%- variable -%]

--------------------------------------------------------------------------------

(source_file
  (directive
    (code
      (identifier)))
  (content))

================================================================================
Number literals
================================================================================
[% 42 %]
[% 3.14 %]

--------------------------------------------------------------------------------

(source_file
  (directive
    (code
      (number)))
  (content)
  (directive
    (code
      (number)))
  (content))

================================================================================
String literals
================================================================================
[% "hello" %]
[% 'world' %]

--------------------------------------------------------------------------------

(source_file
  (directive
    (code
      (string)))
  (content)
  (directive
    (code
      (string)))
  (content))

================================================================================
Boolean literals
================================================================================
[% true %]
[% false %]

--------------------------------------------------------------------------------

(source_file
  (directive
    (code
      (boolean)))
  (content)
  (directive
    (code
      (boolean)))
  (content))

================================================================================
Null literal
================================================================================
[% null %]

--------------------------------------------------------------------------------

(source_file
  (directive
    (code
      (null)))
  (content))

================================================================================
Comment
================================================================================
/* This is a comment */

--------------------------------------------------------------------------------

(source_file
  (comment)
  (content))

================================================================================
Multi-line comment
================================================================================
/*
 * Multi-line
 * comment
 */

--------------------------------------------------------------------------------

(source_file
  (comment)
  (content))

================================================================================
Comment inside directive
================================================================================
[%- /* a comment */ -%]
--------------------------------------------------------------------------------

(source_file
  (directive
    (code
      (comment))))

================================================================================
Doc comment before macro in directive
================================================================================
[%-
/**
 * Doc comment
 */
macro greet();
    return 'hello';
end;
-%]
--------------------------------------------------------------------------------

(source_file
  (directive
    (code
      (comment)
      (macro_definition
        (identifier)
        (return_statement
          (string))))))

================================================================================
Multiple comments inside directive
================================================================================
[% /* first */ /* second */ x = 1; %]

--------------------------------------------------------------------------------

(source_file
  (directive
    (code
      (comment)
      (comment)
      (assignment
        (identifier)
        (number))))
  (content))
