test/corpus/statements.txt
================================================================================
Simple assignment
================================================================================
[% variable = value; %]

--------------------------------------------------------------------------------

(source_file
  (directive
    (code
      (assignment
        (identifier)
        (identifier))))
  (content))

================================================================================
Compound assignment operators
================================================================================
[% counter += 1; %]
[% counter -= 1; %]

--------------------------------------------------------------------------------

(source_file
  (directive
    (code
      (assignment
        (identifier)
        (number))))
  (content)
  (directive
    (code
      (assignment
        (identifier)
        (number))))
  (content))

================================================================================
Property assignment
================================================================================
[% obj.prop = value; %]

--------------------------------------------------------------------------------

(source_file
  (directive
    (code
      (assignment
        (member_expression
          object: (identifier)
          property: (identifier))
        (identifier))))
  (content))

================================================================================
Subscript assignment
================================================================================
[% array[0] = value; %]

--------------------------------------------------------------------------------

(source_file
  (directive
    (code
      (assignment
        (subscript_expression
          object: (identifier)
          index: (number))
        (identifier))))
  (content))

================================================================================
Echo statement
================================================================================
[% echo "Hello"; %]

--------------------------------------------------------------------------------

(source_file
  (directive
    (code
      (echo_statement
        (string))))
  (content))

================================================================================
Return statement
================================================================================
[% return; %]
[% return value; %]

--------------------------------------------------------------------------------

(source_file
  (directive
    (code
      (return_statement)))
  (content)
  (directive
    (code
      (return_statement
        (identifier))))
  (content))

================================================================================
Break statement
================================================================================
[% break; %]

--------------------------------------------------------------------------------

(source_file
  (directive
    (code
      (break_statement)))
  (content))

================================================================================
Continue statement
================================================================================
[% continue; %]

--------------------------------------------------------------------------------

(source_file
  (directive
    (code
      (continue_statement)))
  (content))

================================================================================
Call statement
================================================================================
[% call cms.component.load('name'); %]

--------------------------------------------------------------------------------

(source_file
  (directive
    (code
      (call_statement
        (call_expression
          function: (member_expression
            object: (member_expression
              object: (identifier)
              property: (identifier))
            property: (identifier))
          (argument_list
            (argument
              (string)))))))
  (content))

================================================================================
Include statement
================================================================================
[% include "file.utl"; %]

--------------------------------------------------------------------------------

(source_file
  (directive
    (code
      (include_statement
        (string))))
  (content))

================================================================================
Multiple statements
================================================================================
[% a = 1; b = 2; echo a; %]

--------------------------------------------------------------------------------

(source_file
  (directive
    (code
      (assignment
        (identifier)
        (number))
      (assignment
        (identifier)
        (number))
      (echo_statement
        (identifier))))
  (content))
